first-cut complete workshop

--- a/foss4g22.bib
+++ b/foss4g22.bib
@@ -105,4 +105,19 @@ volume=23,
 pages=515-546,
 doi={10.1007/s10109-020-00336-0}
 }
+@article{brodyetal:00,
+   author = {H. Brody and M. R. Rip and P. Vinten-Johansen and N. Paneth and S. Rachman},
+   title = {Map-making and myth-making in {B}road {S}treet: the {L}ondon cholera epidemic, 1854},
+   journal = {Lancet},
+   volume = {356},
+   pages = {64--68},
+   year = {2000}
+}
+@Book{osullivan+unwin:03,
+	author =	{D. O'Sullivan and D. J. Unwin},
+	title = 	{Geographical Information Analysis},
+	year =		{2003},
+	publisher =	{Wiley},
+	address =	{Hoboken, NJ}
+}
 
