add terra example

--- a/foss4g22.bib
+++ b/foss4g22.bib
@@ -120,4 +120,14 @@ doi={10.1007/s10109-020-00336-0}
 	publisher =	{Wiley},
 	address =	{Hoboken, NJ}
 }
+@article{bivand:22,
+author = {Bivand, Roger},
+title = {{R} Packages for Analyzing Spatial Data: A Comparative Case Study with Areal Data},
+journal = {Geographical Analysis},
+volume = {54},
+number = {3},
+pages = {488-518},
+url = {https://doi.org/10.1111/gean.12319},
+year = {2022}
+}
 
